--- a/templates/layout.html
+++ b/templates/layout.html
@@ -214,8 +214,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<p class="text-da">An Environmental Intelligence Startup<br> </p>
 			</div>
 			<p class="homelogo">
-			<p>Made with ❤️ by Atharva</p>
-			<p>&copy; Copyright 2022 Atharva Ingle</p>
+			<p>Made with ❤️ by Shivam , Ram , Ramta</p>
+			<!-- <p>&copy; Copyright 2022 Atharva Ingle</p> -->
 			
 		</div>
 	</footer>
