--- a/templates/layout.html
+++ b/templates/layout.html
@@ -214,7 +214,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<p class="text-da">An Environmental Intelligence Startup<br> </p>
 			</div>
 			<p class="homelogo">
-			<p>Made with ❤️ by Shivam , Ram , Ramta</p>
+			<p>Made with ❤️ by Subhadra Ghosh</p>
 			<!-- <p>&copy; Copyright 2022 Atharva Ingle</p> -->
 			
 		</div>
